# profile.mobile.apps.native.camera-app

./: .camera.ini  .cproject  .gitignore  .project  .sdk_delta.info  CMakeLists.txt  org.tizen.camera-app-1.0.0-arm-debug.tpk  org.tizen.camera-app-1.0.0-arm.tpk  org.tizen.camera-app-1.0.0-arm_debug.tpk  org.tizen.camera-app-1.0.0-i386-debug.tpk  org.tizen.camera-app-1.0.0-i386.tpk  org.tizen.camera-app-1.0.0-i386_debug.tpk  org.tizen.camera-app.efl  org.tizen.camera-app.manifest  org.tizen.camera-app.xml  project_def.prop  tizen-manifest.xml
.sign/: .manifest.tmp  author-signature.xml  signature1.xml
edc/: cam_ev_layout.edc  cam_funcs.edc  cam_images.edc  cam_main_layout.edc  cam_panorama_burst_shot_edje_inc.edc  cam_quicksetting_help.edc  cam_recording_view_inc.edc  cam_selfie_layout.edc  cam_setting_view.edc  cam_setting_view_inc.edc  cam_shooting_mode_layout.edc  cam_shot_guide_text.edc  cam_shot_guide_text_inc.edc  cam_shot_processing_view.edc  cam_standby_view.edc  cam_standby_view_inc.edc  cam_utils.edc  cam_zoom_layout.edc  style_button_camera.edc  style_ctxpopup_camera_with_radio.edc  style_gengrid_camera.edc
inc/: edc_defines.h  edc_image_name.h
packaging/: org.tizen.camera-app.spec
po/: ar.po  bg.po  ca.po  da.po  el_GR.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  hr.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  lt.po  mk.po  pt_BR.po  ro.po  sr.po  uz.po  zh_TW.po
res/edc/: cam_funcs.edc  cam_images.edc  cam_main_layout.edc  cam_recording_view.edc  cam_recording_view_inc.edc  cam_setting_view.edc  cam_shot_guide_text.edc  cam_shot_processing_view.edc  cam_standby_view_inc.edc  cam_utils.edc  style_genlist_normal.edc
res/edje/: cam_ev_layout.edc  cam_quicksetting_help.edc  cam_selfie_layout.edc  cam_setting_view_inc.edc  cam_shooting_mode_layout.edc  cam_standby_view.edc  cam_standby_view_inc.edc  cam_zoom_layout.edc  style_button_camera.edc  style_ctxpopup_camera_with_radio.edc  style_gengrid_camera.edc  style_genlist_macro.edc  style_tizen_hd_inc.edc
res/po/: CMakeLists.txt  az.po  ca.po  cs.po  de.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  gl.po  hi.po  hu.po  ko_KR.po  lv.po  nb.po  nl.po  pl.po  pt_PT.po  ru_RU.po  sk.po  sl.po  sv.po  tr_TR.po  uk.po  zh_CN.po  zh_HK.po
src/: cam_property.h
src/animation/: cam_animation.c  cam_animation.h  cam_ui_effect_utils.c  cam_ui_effect_utils.h  cam_ui_rotate_utils.c  cam_ui_rotate_utils.h
src/app-control/: cam_app.c  cam_app.h  cam_common_edc_callback.c  cam_common_edc_callback.h
src/capacity/: CamDeviceCapacity.cpp  CamDeviceCapacity.h  CamTypeConverter.cpp  CamTypeConverter.h  cam_capacity_type.h  cam_device_capacity.cpp  cam_device_capacity.h  cam_typeconverter.cpp  cam_typeconverter.h
src/core/: cam.c  cam.h
src/dev-control/: cam_mm.c  cam_mm.h
src/menu/: cam_menu_composer.c  cam_menu_composer.h  cam_menu_item.c  cam_menu_item.h
src/record/: cam_rec.c  cam_rec.h
src/shot/: cam_selfie_alarm_shot.c  cam_selfie_alarm_shot.h  cam_shot.c  cam_shot.h
src/system-mgr/: cam_exif_info.c  cam_exif_info.h  cam_file.c  cam_file.h  cam_lbs.c  cam_lbs.h  cam_sound.c  cam_sound.h  cam_sound_session_manager.c  cam_sound_session_manager.h  cam_sr_control.c  cam_sr_control.h
src/util/: cam_config.c  cam_config.h  cam_debug.h  cam_error.h  cam_face_detection_focus.c  cam_face_detection_focus.h  cam_long_press.c  cam_long_press.h  cam_mem_check.c  cam_mem_check.h  cam_mode.c  cam_mode.h  cam_utils.c  cam_utils.h
src/view/main-view/: cam_mode_view.c  cam_mode_view.h  cam_mode_view_grid_mode.c  cam_mode_view_grid_mode.h  cam_mode_view_utils.c  cam_mode_view_utils.h  cam_recording_view.c  cam_recording_view.h  cam_selfie_alarm_layout.c  cam_selfie_alarm_layout.h  cam_setting_view.c  cam_setting_view.h  cam_shot_processing_view.c  cam_shot_processing_view.h  cam_standby_view.c  cam_standby_view.h
src/view/widget/: cam_edit_box.c  cam_edit_box.h  cam_ev_edc_callback.c  cam_ev_edc_callback.h  cam_gengrid_popup.c  cam_gengrid_popup.h  cam_genlist_popup.c  cam_genlist_popup.h  cam_help_popup.c  cam_help_popup.h  cam_indicator.c  cam_indicator.h  cam_popup.c  cam_popup.h  cam_storage_popup.c  cam_storage_popup.h  cam_zoom_edc_callback.c  cam_zoom_edc_callback.h
